# kousukanri

./: .gitignore  CLAUDE.md  README.md  api_server.py  cli.py  commit_msg.txt  main.py  pyproject.toml
.github/workflows/: build-release.yml
cli_client/: README.md  pyproject.toml
cli_client/kousu_kanri_api_client/: __init__.py
cli_client/kousu_kanri_api_client/models/: __init__.py  daily_report.py  daily_report_by_day.py  daily_report_by_day_daily_item.py  error.py  get_api_health_response_200.py  get_api_report_detail.py  get_api_reports_by_day_detail.py  get_api_reports_detail.py  get_api_tasks_simple.py  period_report.py  project.py  project_create.py  project_entry.py  project_entry_tasks_item.py  task.py  task_create.py  task_created.py
controllers/: task_controller.py
docs/: architecture.md  design-decisions.md  phase-history.md
models/: database.py  project.py  routine.py  task.py
templates/: _report_items.html  base.html  index.html  projects.html  report.html  reports.html  reports_by_day.html  tasks.html
utils/: constants.py  report_helpers.py  settings.py  startup.py  theme.py
views/: color_picker_dialog.py  date_nav_widget.py  export_view.py  flow_layout.py  main_window.py  project_list_view.py  report_view.py  routine_view.py  settings_view.py  task_block_item.py  task_edit_dialog.py  task_list_view.py  time_ruler_item.py  timeline_scene.py  timeline_view.py  timer_widget.py
web/: index.html  package-lock.json  vite.config.ts
web/public/: openapi.yaml
web/src/: App.tsx  api.ts  index.css  utils.ts
web/src/components/: DateForm.tsx  (+3 more)
(+15 files in other folders)
